# gridist

./: .gitignore  .goreleaser.yaml  Cargo.toml  README.md  mise.toml
.github/: pull_request_template.md  release.yml
.github/workflows/: gridist.yml  release.yml  rust.yaml  sync-labels.yml
src/: lib.rs  main.rs
