[package]
name = "gridist"
version = "0.1.0"
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/kiwamizamurai/gridist"
description = "Create stunning profile decorations by splitting your images into a grid and uploading them to GitHub Gists"
keywords = ["github", "gist", "image", "grid", "profile"]
categories = ["command-line-utilities", "multimedia::images"]

[dependencies]
image = "0.25"
gif = "0.13.1"
reqwest = { version = "0.12.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
base64 = "0.21"
git2 = "0.19"
clap = { version = "4.4", features = ["derive", "cargo", "env"] }
tempfile = "3.2"
rayon = "1.5"
kdtree = "0.7"
wide = "0.7"
indicatif = "0.17.8"
ratatui = "0.26.1"
crossterm = "0.27.0"
tokio-util = "0.7.10"
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
mockall = "0.12"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
color-eyre = "0.6"
arboard = "3.3"
open = "5.0"
openssl-sys = { version = "0.9", features = ["vendored"] }

[profile.release]
codegen-units = 1
lto = true
opt-level = 3